# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /api/v1
 definitions:
-  errors.AppError:
+  apperrors.AppError:
     properties:
       code:
         type: integer
@@ -8,6 +8,23 @@ definitions:
         type: string
       message:
         type: string
+    type: object
+  handlers.CreateUserRequest:
+    properties:
+      email:
+        example: john@example.com
+        type: string
+      name:
+        example: johndoe
+        type: string
+      password:
+        example: secret123
+        minLength: 6
+        type: string
+    required:
+    - email
+    - name
+    - password
     type: object
   models.User:
     properties:
@@ -52,7 +69,7 @@ paths:
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/errors.AppError'
+            $ref: '#/definitions/apperrors.AppError'
       summary: Lấy danh sách users
       tags:
       - users
@@ -66,7 +83,7 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/models.User'
+          $ref: '#/definitions/handlers.CreateUserRequest'
       produces:
       - application/json
       responses:
@@ -77,7 +94,7 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/errors.AppError'
+            $ref: '#/definitions/apperrors.AppError'
       summary: Tạo user mới
       tags:
       - users
@@ -100,15 +117,15 @@ paths:
         "400":
           description: Invalid ID
           schema:
-            $ref: '#/definitions/errors.AppError'
+            $ref: '#/definitions/apperrors.AppError'
         "404":
           description: User not found
           schema:
-            $ref: '#/definitions/errors.AppError'
+            $ref: '#/definitions/apperrors.AppError'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/errors.AppError'
+            $ref: '#/definitions/apperrors.AppError'
       summary: Lấy user bằng ID
       tags:
       - users
